# usf2plugin

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: DistrhoPluginInfo.h  GeneralUser-GS.cpp  GeneralUser-GS.h  PluginProcessor.cpp  PluginProcessor.hpp  PluginUI.cpp  PluginUI.hpp  SF2Application.cpp  SF2Application.h  Usf2EditControllerWebServer.cpp  Usf2EditControllerWebServer.h  Usf2Plugin.cpp  Usf2Plugin.hpp  Usf2PluginUI.hpp  index.html
src/web/: App.js  DPF.js  main.html  package-lock.json  package.json
